[ALPS04878287] iommu: add bank1~bank4 irq for mt6873
[Detail]
enable protect bank and secure bank irq handler

MTK-Commit-Id: 433c45be0c3ff707c871dbded04ae165771a6d05

Change-Id: Ibe4e7cefc3d62f856b7f990098d2cc5c4ad32522
Signed-off-by: Chao Hao <chao.hao@mediatek.com>
CR-Id: ALPS04878287
Feature: [Module]ION/M4U

--- a/arch/arm64/boot/dts/mediatek/mt6873.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6873.dts
@@ -3649,6 +3649,27 @@
 		#iommu-cells = <1>;
 	};
 
+	iommu0_bank1: m4u@1401e000 {
+		cell-index = <0>;
+		compatible = "mediatek,bank1_m4u0";
+		reg = <0 0x1401e000 0 0x1000>;
+		interrupts = <GIC_SPI 278 IRQ_TYPE_LEVEL_HIGH>;
+	};
+
+	iommu0_bank2: m4u@1401f000 {
+		cell-index = <0>;
+		compatible = "mediatek,bank2_m4u0";
+		reg = <0 0x1401f000 0 0x1000>;
+		interrupts = <GIC_SPI 279 IRQ_TYPE_LEVEL_HIGH>;
+	};
+
+	iommu0_bank3: m4u@14020000 {
+		cell-index = <0>;
+		compatible = "mediatek,bank3_m4u0";
+		reg = <0 0x14020000 0 0x1000>;
+		interrupts = <GIC_SPI 280 IRQ_TYPE_LEVEL_HIGH>;
+	};
+
 	iommu0_sec: m4u@14021000 {
 		cell-index = <0>;
 		compatible = "mediatek,sec_m4u0";
@@ -3667,8 +3688,29 @@
 		#iommu-cells = <1>;
 	};
 
+	iommu1_bank1: m4u@19011000 {
+		cell-index = <1>;
+		compatible = "mediatek,bank1_m4u1";
+		reg = <0 0x19011000 0 0x1000>;
+		interrupts = <GIC_SPI 395 IRQ_TYPE_LEVEL_HIGH>;
+	};
+
+	iommu1_bank2: m4u@19012000 {
+		cell-index = <1>;
+		compatible = "mediatek,bank2_m4u1";
+		reg = <0 0x19012000 0 0x1000>;
+		interrupts = <GIC_SPI 396 IRQ_TYPE_LEVEL_HIGH>;
+	};
+
+	iommu1_bank3: m4u@19013000 {
+		cell-index = <1>;
+		compatible = "mediatek,bank3_m4u1";
+		reg = <0 0x19013000 0 0x1000>;
+		interrupts = <GIC_SPI 397 IRQ_TYPE_LEVEL_HIGH>;
+	};
+
 	iommu1_sec: m4u@19014000 {
-		cell-index = <0>;
+		cell-index = <1>;
 		compatible = "mediatek,sec_m4u1";
 		reg = <0 0x19014000 0 0x1000>;
 		interrupts = <GIC_SPI 398 IRQ_TYPE_LEVEL_HIGH>;
