--- a/arch/arm64/configs/k6873v1_64_debug_defconfig
+++ b/arch/arm64/configs/k6873v1_64_debug_defconfig
@@ -118,7 +118,9 @@ CONFIG_MTK_GPS_SUPPORT=y
 CONFIG_MTK_FMRADIO=y
 CONFIG_MTK_FM_CHIP="MT6635_FM"
 CONFIG_MTK_CONNSYS_DEDICATED_LOG_PATH=y
-# CONFIG_MTK_CCCI_DEVICES is not set
+CONFIG_MTK_MD1_SUPPORT=24
+CONFIG_MTK_ECCCI_DRIVER=y
+CONFIG_MTK_ECCCI_C2K=y
 CONFIG_MTK_BTIF=y
 CONFIG_MTK_ACCDET=y
 CONFIG_ACCDET_EINT_IRQ=y
