--- a/arch/arm64/boot/dts/mediatek/mt6873.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6873.dts
@@ -1856,15 +1856,15 @@
 			/*btif base*/
 		reg = <0 0x1100c000 0 0x1000>,
 			/*btif tx dma base*/
-			<0 0x10217D80 0 0x80>,
+			<0 0x10217d80 0 0x80>,
 			/*btif rx dma base*/
-			<0 0x10217B00 0 0x80>;
+			<0 0x10217e00 0 0x80>;
 			/*btif irq, IRQS_Sync ID, btif_irq_b*/
-		interrupts = <GIC_SPI 158 IRQ_TYPE_LEVEL_LOW>,
+		interrupts = <GIC_SPI 158 IRQ_TYPE_LEVEL_HIGH>,
 			/*btif tx dma irq*/
-			<GIC_SPI 152 IRQ_TYPE_LEVEL_LOW>,
+			<GIC_SPI 152 IRQ_TYPE_LEVEL_HIGH>,
 			/*btif rx dma irq*/
-			<GIC_SPI 153 IRQ_TYPE_LEVEL_LOW>;
+			<GIC_SPI 153 IRQ_TYPE_LEVEL_HIGH>;
 		clocks = <&infracfg_ao INFRACFG_AO_BTIF_CG>,
 			/*btif clock*/
 			<&infracfg_ao INFRACFG_AO_AP_DMA_CG>;
@@ -1907,9 +1907,9 @@
 			/*INFRA_AO_PERICFG_BASE */
 		    <0 0x10003000 0 0x1000>;
 			/*BGF_EINT */
-		interrupts = <GIC_SPI 377 IRQ_TYPE_LEVEL_LOW>,
+		interrupts = <GIC_SPI 377 IRQ_TYPE_LEVEL_HIGH>,
 			/*WDT_EINT */
-			   <GIC_SPI 79 IRQ_TYPE_LEVEL_LOW>,
+			   <GIC_SPI 79 IRQ_TYPE_LEVEL_HIGH>,
 			/*conn2ap_sw_irq*/
 			   <GIC_SPI 378 IRQ_TYPE_EDGE_RISING>;
 		clocks = <&scpsys SCP_SYS_CONN>,
