[ALPS04725849] ATF: Add atf_logger in device tree
Add atf_logger in device tree

MTK-Commit-Id: 1d0407226ecc0108bb431aaa1beacd2e9feaa4c7

Change-Id: Id76559ee3c2a07c913f62f9d95823f1ac674c0ea
Signed-off-by: Chun Fan <chun.fan@mediatek.com>
CR-Id: ALPS04725849
Feature: [Module]ATF (ARM Trusted Firmware)

--- a/arch/arm64/boot/dts/mediatek/mt6873.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6873.dts
@@ -701,6 +701,11 @@
 		#size-cells = <0>;
 	};
 
+	/* ATF logger */
+	atf_logger {
+		compatible = "mediatek,atf_logger";
+	};
+
 	/* Microtrust SW IRQ number 85(117) ~ 90(122) */
 	utos {
 		compatible = "microtrust,utos";
