[ALPS04850261] GPU: qos_gpu v2 power on/off
Notify GPU QOS to set ctx when power change.

MTK-Commit-Id: 0559ac9eecb2ace2a97204f7da5f1dfb2ba58b8e

Change-Id: I4ee1ea6b3a7c1f0abc7baefcb71d1a23b914cab8
CR-Id: ALPS04850261
Feature: OpenGL|ES
Signed-off-by: ian.hou <ian.hou@mediatek.com>

--- a/drivers/misc/mediatek/base/power/gpufreq_v1/mt6885/Makefile
+++ b/drivers/misc/mediatek/base/power/gpufreq_v1/mt6885/Makefile
@@ -19,6 +19,7 @@ ccflags-y += -I$(srctree)/drivers/misc/mediatek/freqhopping/$(CONFIG_MTK_PLATFOR
 ccflags-y += -I$(srctree)/drivers/misc/mediatek/gpu/ged/include/
 ccflags-y += -I$(srctree)/drivers/misc/mediatek/dbgtop/
 ccflags-y += -I$(srctree)/drivers/misc/mediatek/dbgtop/$(MTK_PLATFORM)/
+ccflags-y += -I$(srctree)/drivers/misc/mediatek/gpu/hal/
 ccflags-y += -I$(srctree)/drivers/clk/mediatek/
 
 ccflags-y += -Wno-unused-variable
