[ALPS04908881] timer: enable systimer
1. enable systimer
2. enable timesync
3. revmoe wrong timer clock

MTK-Commit-Id: dd00cfc9307168ad1ab370cb69c7007d067ca156

Change-Id: I087c5229f4796649c9277cb7c434fb2cfc93598f
Signed-off-by: Freddy Hsin <freddy.hsin@mediatek.com>
CR-Id: ALPS04908881
Feature: [Module]Timer

--- a/arch/arm64/boot/dts/mediatek/mt6873.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6873.dts
@@ -474,10 +474,10 @@
 		reg = <0 0x10006500 0 0x1000>;
 	};
 
-	toprgu@10007000 {
+	toprgu: toprgu@10007000 {
 		compatible = "mediatek,toprgu";
 		reg = <0 0x10007000 0 0x1000>;
-		interrupts = <GIC_SPI 77 IRQ_TYPE_EDGE_RISING>;
+		interrupts = <GIC_SPI 434 IRQ_TYPE_LEVEL_HIGH>;
 	};
 
 	apxgpt@10008000 {
@@ -634,9 +634,11 @@
 	};
 
 	sys_timer@10017000 {
-		/* compatible = "mediatek,sys_timer"; */
+		compatible = "mediatek,sys_timer";
 		reg = <0 0x10017000 0 0x1000>;
+		reg-names = "sys_timer_base";
 		interrupts = <GIC_SPI 233 IRQ_TYPE_LEVEL_HIGH>;
+		clocks = <&topckgen TOP_CLK13M>;
 	};
 
 	modem_temp_share@10018000 {
