--- a/arch/arm64/configs/k6873v1_64_defconfig
+++ b/arch/arm64/configs/k6873v1_64_defconfig
@@ -178,6 +178,7 @@ CONFIG_MTK_LOWMEM_HINT=y
 CONFIG_MTPROF=y
 CONFIG_ANDROID_DEFAULT_SETTING=y
 CONFIG_MTK_ANDROID_DEFAULT_SETTING=y
+CONFIG_MTK_TIMER_TIMESYNC=y
 CONFIG_MTK_GPU_SUPPORT=y
 CONFIG_MTK_GPU_VERSION="mali valhall r21p0"
 CONFIG_MTK_VIBRATOR=y
