--- a/arch/arm64/boot/dts/mediatek/mt6873.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6873.dts
@@ -1955,7 +1955,7 @@
 	wifi@18000000 {
 		compatible = "mediatek,wifi";
 		reg = <0 0x18000000 0 0x100000>;
-		interrupts = <GIC_SPI 376 IRQ_TYPE_LEVEL_LOW>;
+		interrupts = <GIC_SPI 376 IRQ_TYPE_LEVEL_HIGH>;
 	};
 
 	consys: consys@18002000 {
