--- a/arch/arm64/configs/k6873v1_64_debug_defconfig
+++ b/arch/arm64/configs/k6873v1_64_debug_defconfig
@@ -62,7 +62,11 @@ CONFIG_MT6360_PMU_CHARGER=y
 CONFIG_MT6360_PMU_FLED=y
 CONFIG_MT6360_PMIC=y
 CONFIG_MT6360_LDO=y
+CONFIG_MTK_CPU_FREQ=y
+CONFIG_MTK_PTPOD=y
+CONFIG_MTK_PTPOD_GPU=y
 CONFIG_MTK_STATIC_POWER=y
+CONFIG_MTK_UNIFY_POWER=y
 CONFIG_MTK_THERMAL_PA_VIA_ATCMD=y
 CONFIG_CUSTOM_KERNEL_IMGSENSOR="imx586_mipi_raw imx576_mipi_raw s5k3m5sx_mipi_raw imx519_mipi_raw imx398_mipi_raw imx350_mipi_raw s5k2l7_mipi_raw imx386_mipi_raw imx386_mipi_mono s5k2t7sp_mipi_raw imx499_mipi_raw"
 CONFIG_CUSTOM_KERNEL_CAM_CAL_DRV="BRCB032GWZ_3 GT24c32a cat24c16"
