--- a/arch/arm64/configs/k6873v1_64_defconfig
+++ b/arch/arm64/configs/k6873v1_64_defconfig
@@ -75,6 +75,7 @@ CONFIG_MT6360_LDO=y
 CONFIG_MTK_APUSYS_VPU=y
 CONFIG_MTK_APUSYS_VPU_DEBUG=y
 CONFIG_MTK_APUSYS_EDMA_SUPPORT=y
+CONFIG_MTK_CPU_FREQ=y
 CONFIG_MTK_PTPOD=y
 CONFIG_MTK_PTPOD_GPU=y
 CONFIG_MTK_STATIC_POWER=y
