[ALPS04920714] mt6873: DCM: add dts node
add DCM dts node

MTK-Commit-Id: 794a0537d4c0b5c8060e23f6849eb0fe36531049

Change-Id: Ib0451648a14d09cf8120d275acd8f888f3786000
Signed-off-by: Kevin-CW Chen <kevin-cw.chen@mediatek.com>
CR-Id: ALPS04920714
Feature: Power Management

--- a/arch/arm64/boot/dts/mediatek/mt6873.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6873.dts
@@ -314,6 +314,30 @@
 		#clock-cells = <1>;
 	};
 
+	dcm: dcm@10001000 {
+		compatible = "mediatek,mt6873-dcm";
+		reg = <0 0x10001000 0 0x1000>,
+			<0 0x10002000 0 0x1000>,
+			<0 0x10219000 0 0x1000>,
+			<0 0x10230000 0 0x1000>,
+			<0 0x10235000 0 0x1000>,
+			<0 0x10240000 0 0x1000>,
+			<0 0x10400000 0 0x1000>,
+			<0 0x11210000 0 0x1000>,
+			<0 0xc538000 0 0x1000>,
+			<0 0xc53a800 0 0x1000>;
+		reg-names = "infracfg_ao",
+			"infracfg_ao_mem",
+			"emi",
+			"dramc_ch0_top0",
+			"chn0_emi",
+			"dramc_ch1_top0",
+			"sspm",
+			"audio",
+			"mp_cpusys_top",
+			"cpccfg_reg";
+	};
+
 	scpsys: scpsys@10001000 {
 		compatible = "mediatek,scpsys";
 		reg = <0 0x10001000 0 0x1000>,		/* infracfg_ao */
