[ALPS04922400] aee: enable aee kernel config
enable aee kernel config to generate reboot exceptions db.

MTK-Commit-Id: 1247988ecd73050b0e8dbb938ecd85c614880441

Change-Id: Ic9d61545bd04b69c22b93325b2cce4e9922e62e5
Signed-off-by: zhiyong.wang <zhiyong.wang@mediatek.com>
CR-Id: ALPS04922400
Feature: Android Exception Engine(AEE)

--- a/arch/arm64/configs/k6873v1_64_defconfig
+++ b/arch/arm64/configs/k6873v1_64_defconfig
@@ -172,6 +172,8 @@ CONFIG_MTK_SCHED_BOOST=y
 CONFIG_MTK_SCHED_RQAVG_KS=y
 CONFIG_MTK_SCHED_RQAVG_US=y
 CONFIG_MTK_SCHED_CPULOAD=y
+CONFIG_MTK_RAM_CONSOLE=y
+CONFIG_MTK_AEE_FEATURE=y
 CONFIG_MTK_RTC=y
 CONFIG_MTK_USB_TYPEC_U3_MUX=y
 CONFIG_TCPC_MT6360=y
