--- a/arch/arm64/configs/k6873v1_64_debug_defconfig
+++ b/arch/arm64/configs/k6873v1_64_debug_defconfig
@@ -222,8 +222,8 @@ CONFIG_MTK_CHARGER=y
 CONFIG_MTK_KERNEL_POWER_OFF_CHARGING=y
 # CONFIG_HWMON is not set
 CONFIG_WATCHDOG=y
-# CONFIG_MTK_WATCHDOG is not set
-# CONFIG_MTK_WD_KICKER is not set
+CONFIG_MTK_WATCHDOG_COMMON=y
+CONFIG_MTK_WATCHDOG_COMMON_V2=y
 CONFIG_MFD_MT6358=y
 CONFIG_MT6358_MISC=y
 CONFIG_MTK_MFD_SPMI_PMIC=y
