[ALPS04839371] arm64: dts: mt6873: revise devapc node
Revises mt6873 devapc dts node

MTK-Commit-Id: fb96085f349d50766c4269ef0e97b17228e45308

Change-Id: Ib1a1e3cac3356bb934845c15c386f3def440a0d5
Signed-off-by: Neal Liu <neal.liu@mediatek.com>
CR-Id: ALPS04839371
Feature: [Module]Device APC

--- a/arch/arm64/boot/dts/mediatek/mt6873.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6873.dts
@@ -835,9 +835,16 @@
 	};
 
 	devapc@10207000 {
-		compatible = "mediatek,devapc";
-		reg = <0 0x10207000 0 0x1000>;
+		compatible = "mediatek,mt6873-devapc";
+		reg = <0 0x10207000 0 0x1000>,
+			<0 0x10274000 0 0x1000>,
+			<0 0x10275000 0 0x1000>,
+			<0 0x11020000 0 0x1000>,
+			<0 0x10030000 0 0x1000>,
+			<0 0x1020e000 0 0x1000>;
 		interrupts = <GIC_SPI 187 IRQ_TYPE_LEVEL_HIGH>;
+		clocks = <&infracfg_ao INFRACFG_AO_DEVICE_APC_CG>;
+		clock-names = "devapc-infra-clock";
 	};
 
 	bus_dbg@10208000 {
