[ALPS04888790] Thermal: porting thermal zone and cooling device
porting the following feature:
1. reading thermal temperature
2. porting thermal bts for SMT
3. porting cooling device
4. sync some thermal feature from mt6885

MTK-Commit-Id: e314ad0c720d0395509097faf3ad0b960ee902f9

Change-Id: Id47e753b70eac6080a4a4a1e18416e4752c1df95
Signed-off-by: Samuel Hsieh <samuel.hsieh@mediatek.com>
CR-Id: ALPS04888790
Feature: Thermal Management

--- a/arch/arm64/boot/dts/mediatek/mt6873.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6873.dts
@@ -1922,6 +1922,24 @@
 		clock-names = "therm-main";
 	};
 
+	tboard_thermistor1: thermal-sensor1 {
+		compatible = "mediatek,mtboard-thermistor1";
+		io-channels = <&auxadc 0>;
+		io-channel-names = "thermistor-ch0";
+	};
+
+	tboard_thermistor2: thermal-sensor2 {
+		compatible = "mediatek,mtboard-thermistor2";
+		io-channels = <&auxadc 1>;
+		io-channel-names = "thermistor-ch1";
+	};
+
+	tboard_thermistor3: thermal-sensor3 {
+		compatible = "mediatek,mtboard-thermistor3";
+		io-channels = <&auxadc 2>;
+		io-channel-names = "thermistor-ch2";
+	};
+
 	mali@13000000 {
 		compatible = "mediatek,mali", "arm,mali-valhall";
 		reg = <0 0x13000000 0 0x4000>;
