--- a/drivers/misc/mediatek/thermal/mt6873/src/Makefile
+++ b/drivers/misc/mediatek/thermal/mt6873/src/Makefile
@@ -16,10 +16,7 @@ ccflags-y  += -I$(THERMAL_CHIP_DRIVER_DIR)/inc
 ccflags-y  += -I$(srctree)/drivers/misc/mediatek/base/power/$(MTK_PLATFORM)
 ccflags-y  += -I$(srctree)/drivers/misc/mediatek/gpu/hal/
 ccflags-y  += -I$(srctree)/drivers/misc/mediatek/thermal/fakeHeader/
-ccflags-y  += -I$(srctree)/drivers/misc/mediatek/sspm/v1
-ccflags-y  += -I$(srctree)/drivers/misc/mediatek/sspm
-ccflags-y  += -I$(srctree)/drivers/misc/mediatek/sspm/$(MTK_PLATFORM)
-ccflags-y += -I$(srctree)/drivers/misc/mediatek/sspm/v2
+ccflags-y  += -I$(srctree)/drivers/misc/mediatek/mcupm/$(MTK_PLATFORM)
 ccflags-y  += -I$(srctree)/drivers/misc/mediatek/include/mt-plat/
 ccflags-y  += -I$(srctree)/drivers/misc/mediatek/base/power/include/spm/
 ccflags-y  += -I$(srctree)/drivers/misc/mediatek/base/power/eem_v2/mt3967/inc/
@@ -39,4 +36,4 @@ obj-$(CONFIG_THERMAL) += mtk_ts_6359vproc.o
 obj-$(CONFIG_THERMAL) += mtk_ts_6359vgpu.o
 obj-$(CONFIG_THERMAL) += mtk_ts_6359tsx.o
 obj-$(CONFIG_THERMAL) += mtk_ts_6359dcxo.o
-obj-$(CONFIG_THERMAL) += mtk_ti_6315.o
+#obj-$(CONFIG_THERMAL) += mtk_ti_6315.o
