[ALPS04916092] mdp: Marguax EP
[Detail] Marguax EP

MTK-Commit-Id: 481f9b749247b1aeaccd8bcf84224d02dd13f4c6

Change-Id: Iac220cfa8d37a9ea04d5e9413f114770a82de617
Signed-off-by: Chris-YC Chen <chris-yc.chen@mediatek.com>
CR-Id: ALPS04916092
Feature: [Module]MDP Driver

--- a/drivers/misc/mediatek/mdp/Makefile
+++ b/drivers/misc/mediatek/mdp/Makefile
@@ -19,6 +19,9 @@ ccflags-$(CONFIG_MACH_MT6768) += -DCMDQ_MDP_ENABLE_SPR
 ccflags-$(CONFIG_MACH_MT6885) += -DCMDQ_MDP_ENABLE_SPR
 ccflags-$(CONFIG_MACH_MT6885) += -DPMQOS_VERSION2
 ccflags-$(CONFIG_MACH_MT6885) += -DMDP_MMPATH
+ccflags-$(CONFIG_MACH_MT6873) += -DCMDQ_MDP_ENABLE_SPR
+ccflags-$(CONFIG_MACH_MT6873) += -DPMQOS_VERSION2
+ccflags-$(CONFIG_MACH_MT6873) += -DMDP_MMPATH
 
 ifeq ($(CONFIG_MACH_MT6785),y)
 ccflags-y += -DPMQOS_VERSION2
