--- a/arch/arm64/configs/k6873v1_64_debug_defconfig
+++ b/arch/arm64/configs/k6873v1_64_debug_defconfig
@@ -74,6 +74,7 @@ CONFIG_MTK_CAM_CAL=y
 CONFIG_MTK_CMDQ=y
 CONFIG_MTK_CMDQ_MBOX_EXT=y
 CONFIG_MTK_IMGSENSOR=y
+CONFIG_MTK_SMI_EXT=y
 CONFIG_MTK_LCM=y
 CONFIG_CUSTOM_KERNEL_LCM="td4330_fhdp_dsi_cmd_auo_rt5081"
 CONFIG_MTK_FB=y
