--- a/arch/arm64/configs/k6873v1_64_debug_defconfig
+++ b/arch/arm64/configs/k6873v1_64_debug_defconfig
@@ -62,6 +62,7 @@ CONFIG_MT6360_PMU_CHARGER=y
 CONFIG_MT6360_PMU_FLED=y
 CONFIG_MT6360_PMIC=y
 CONFIG_MT6360_LDO=y
+CONFIG_MTK_APUSYS_SUPPORT=y
 CONFIG_MTK_CPU_FREQ=y
 CONFIG_MTK_PTPOD=y
 CONFIG_MTK_PTPOD_GPU=y
