--- a/arch/arm64/boot/dts/mediatek/mt6873.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6873.dts
@@ -2417,6 +2417,16 @@
 		#clock-cells = <1>;
 	};
 
+	mtk_mdla: mdla@19036000 {
+		compatible = "mtk,mdla";
+		reg = <0 0x19034000 0 0x1000>,  /* dla0 config  */
+		      <0 0x19036000 0 0x1000>,  /* dla0 command */
+		      <0 0x19035000 0 0x1000>,  /* dla0 biu     */
+		      <0 0x1d000000 0 0x100000>,/* GSM,TODO      */
+		      <0 0x19020000 0 0x40000>;  /* APU CONN     */
+		interrupts = <GIC_SPI 414 IRQ_TYPE_LEVEL_HIGH>;
+	};
+
 	apusys_mnoc@1906e000 {
 		compatible = "mediatek,apusys_mnoc";
 		reg = <0 0x1906e000 0 0xa000>,	/* mnoc reg  */
