--- a/arch/arm64/configs/k6873v1_64_debug_defconfig
+++ b/arch/arm64/configs/k6873v1_64_debug_defconfig
@@ -205,6 +205,8 @@ CONFIG_INPUT_TOUCHSCREEN=y
 CONFIG_TOUCHSCREEN_MTK_TOUCH="GT9886 GT9896S"
 CONFIG_INPUT_MISC=y
 CONFIG_INPUT_UINPUT=y
+CONFIG_MTK_FINGERPRINT_SUPPORT=y
+CONFIG_MTK_FINGERPRINT_SELECT="GF3658"
 # CONFIG_VT is not set
 CONFIG_LEGACY_PTY_COUNT=16
 # CONFIG_DEVMEM is not set
