[ALPS04920798] Sensor: Add NANOHUB/IPI Support
Enable CONFIG_NANOHUB/CONFIG_NANOHUB_MTK_IPI
support for sensor SMT.

MTK-Commit-Id: 9efa21d55004f354e5a7207b8dd1bb267e871eaa

Change-Id: I83a4a33450ba8ed70b0edf51507df5dae9c52242
Signed-off-by: zhichao.liu <zhichao.liu@mediatek.com>
CR-Id: ALPS04920798
Feature: Sensor Hub

--- a/arch/arm64/configs/k6873v1_64_debug_defconfig
+++ b/arch/arm64/configs/k6873v1_64_debug_defconfig
@@ -118,6 +118,8 @@ CONFIG_MTK_DEVICE_ORIENTATION_HUB=y
 CONFIG_MTK_MOTION_DETECT_HUB=y
 CONFIG_MTK_TILTDETECTHUB=y
 CONFIG_CUSTOM_KERNEL_SENSORHUB=y
+CONFIG_NANOHUB=y
+CONFIG_NANOHUB_MTK_IPI=y
 CONFIG_MTK_COMBO=y
 CONFIG_MTK_COMBO_CHIP_CONSYS_6873=y
 CONFIG_MTK_COMBO_GPS=y
