[ALPS04927723] AF: enable main AF
enable AF for SMT

MTK-Commit-Id: 00a389bae1dd53368808e3a0921c3d6a43037232

Change-Id: I3282c68acb080d2e9ead686581fe301ae98a87bc
CR-Id: ALPS04927723
Feature: [Android Default] Camera Application Basic Functions
Signed-off-by: bradley_kung <bradley.kung@mediatek.com>

--- a/arch/arm64/boot/dts/mediatek/k6873v1_64.dts
+++ b/arch/arm64/boot/dts/mediatek/k6873v1_64.dts
@@ -324,6 +324,11 @@
 	};
 };
 
+&camera_af_hw_node {
+	vcamaf-supply = <&mt_pmic_vcamio_ldo_reg>;
+	status = "okay";
+};
+
 &mtkfb {
 	pinctrl-names = "lcd_bias_enp1_gpio", "lcd_bias_enp0_gpio",
 		"lcd_bias_enn1_gpio", "lcd_bias_enn0_gpio",
