--- a/arch/arm64/configs/k6873v1_64_debug_defconfig
+++ b/arch/arm64/configs/k6873v1_64_debug_defconfig
@@ -2,8 +2,12 @@ CONFIG_CROSS_COMPILE="aarch64-linux-android-"
 # CONFIG_LOCALVERSION_AUTO is not set
 # CONFIG_FHANDLE is not set
 CONFIG_LOG_BUF_SHIFT=19
+CONFIG_UCLAMP_TASK=y
+CONFIG_UCLAMP_GROUPS_COUNT=32
+CONFIG_UCLAMP_MAP_OPP=y
+CONFIG_NONLINEAR_FREQ_CTL=y
+CONFIG_UCLAMP_TASK_GROUP=y
 CONFIG_CPUSETS=y
-CONFIG_CGROUP_DEBUG=y
 CONFIG_SCHED_TUNE=y
 CONFIG_DEFAULT_USE_ENERGY_AWARE=y
 CONFIG_SYSCTL_SYSCALL=y
@@ -28,6 +32,7 @@ CONFIG_BUILD_ARM64_DTB_OVERLAY_IMAGE_NAMES="mediatek/k6873v1_64"
 CONFIG_COMPAT=y
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 CONFIG_CPU_FREQ=y
+CONFIG_CPU_FREQ_DEFAULT_GOV_SCHEDUTIL=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
@@ -149,7 +154,9 @@ CONFIG_MTK_LEDS=y
 CONFIG_MTK_PWM=y
 CONFIG_MTK_CHIP=y
 CONFIG_MTK_IDLE_BALANCE_ENHANCEMENT=y
+CONFIG_MTK_SCHED_EAS_POWER_SUPPORT=y
 CONFIG_SCHED_HMP=y
+CONFIG_MTK_SCHED_BOOST=y
 CONFIG_MTK_SCHED_RQAVG_KS=y
 CONFIG_MTK_SCHED_RQAVG_US=y
 CONFIG_MTK_SCHED_CPULOAD=y
