[ALPS04878287] DISP: DRM Arch early porting
[Detail]
DRM Arch early porting.

MTK-Commit-Id: d7dac23f64e1577124634b76d016953f3a5e3bc4

Change-Id: I9ab9da93941419e2ec87941b19c4c6f2096d85d6
Signed-off-by: mtk16844 <yonggang.yu@mediatek.com>
CR-Id: ALPS04878287
Feature: Display Driver (DSI Interface)

--- a/arch/arm64/boot/dts/mediatek/k6873v1_64.dts
+++ b/arch/arm64/boot/dts/mediatek/k6873v1_64.dts
@@ -344,6 +344,43 @@
 	status = "okay";
 };
 
+&dispsys_config {
+	pinctrl-names =
+		"lcm_rst_out1_gpio", "lcm_rst_out0_gpio",
+		"mode_te_te";
+	pinctrl-0 = <&mtkfb_pins_lcm_rst_out1_gpio>;
+	pinctrl-1 = <&mtkfb_pins_lcm_rst_out0_gpio>;
+	pinctrl-2 = <&mtkfb_pins_lcm_dsi_te>;
+	status = "okay";
+};
+
+&dsi0 {
+	status = "okay";
+	#address-cells = <1>;
+	#size-cells = <0>;
+	panel@0 {
+		compatible = "truly,td4330,vdo";
+		reg = <0>;
+		pm-enable-gpios = <&pio 41 0>;
+		reset-gpios = <&pio 42 0>;
+		bias-gpios = <&pio 28 0>,
+			<&pio 29 0>;
+		pinctrl-names = "default";
+		port {
+			panel_in: endpoint {
+				remote-endpoint = <&dsi_out>;
+			};
+		};
+	};
+	ports {
+		port {
+			dsi_out: endpoint {
+				remote-endpoint = <&panel_in>;
+			};
+		};
+	};
+};
+
 /* accdet start */
 &accdet {
 	/* accdet micbias voltage: 0x09:2.85v 0x08:2.8v 0x07,
