--- a/arch/arm64/boot/dts/mediatek/mt6873.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6873.dts
@@ -44,6 +44,15 @@
 			page_owner=on";
 	};
 
+	aliases {
+		ovl0  = &disp_ovl0;
+		ovl3  = &disp_ovl0_2l;
+		ovl5  = &disp_ovl2_2l;
+		rdma0 = &disp_rdma0;
+		rdma4 = &disp_rdma4;
+		dsi0  = &dsi0;
+	};
+
 	cpus {
 		#address-cells = <1>;
 		#size-cells = <0>;
@@ -3032,12 +3041,6 @@
 		compatible = "mediatek,mtkfb";
 	};
 
-	dispsys_config: dispsys_config@14000000 {
-		compatible = "mediatek,dispsys_config", "syscon";
-		reg = <0 0x14000000 0 0x1000>;
-		#clock-cells = <1>;
-	};
-
 	dispsys {
 		compatible = "mediatek,dispsys";
 		mediatek,larb = <&smi_larb0>;
@@ -3054,6 +3057,7 @@
 			<&dispsys_config MM_DISP_COLOR0>,
 			<&dispsys_config MM_DISP_CCORR0>,
 			<&dispsys_config MM_DISP_AAL0>,
+			<&dispsys_config MM_MDP_AAL4>,
 			<&dispsys_config MM_DISP_GAMMA0>,
 			<&dispsys_config MM_DISP_POSTMASK0>,
 			<&dispsys_config MM_DISP_DITHER0>,
@@ -3063,6 +3067,8 @@
 			<&dispsys_config MM_DISP_MUTEX0>,
 			<&dispsys_config MM_DISP_CONFIG>,
 			<&dispsys_config MM_DISP_RSZ0>,
+			<&dispsys_config MM_DISP_MUTEX0>,
+			<&dispsys_config MM_DISP_CONFIG>,
 			<&apmixed APMIXED_MIPID0_26M>,
 			<&topckgen TOP_MUX_DISP_PWM>,
 			<&infracfg_ao INFRACFG_AO_DISP_PWM_CG>,
@@ -3085,6 +3091,7 @@
 			"MMSYS_DISP_COLOR0",
 			"MMSYS_DISP_CCORR0",
 			"MMSYS_DISP_AAL0",
+			"MMSYS_DISP_MDP_AAL4",
 			"MMSYS_DISP_GAMMA0",
 			"MMSYS_DISP_POSTMASK0",
 			"MMSYS_DISP_DITHER0",
@@ -3094,6 +3101,8 @@
 			"MMSYS_DISP_MUTEX0",
 			"MMSYS_DISP_CONFIG",
 			"MMSYS_DISP_RSZ0",
+			"MMSYS_DISP_MUTEX0",
+			"MMSYS_DISP_CONFIG",
 			"APMIXED_MIPI_26M",
 			"TOP_MUX_DISP_PWM",
 			"DISP_PWM",
@@ -3110,21 +3119,173 @@
 		interrupts = <GIC_SPI 171 IRQ_TYPE_LEVEL_HIGH>;
 	};
 
-	dsi_te: dsi_te {
-		compatible = "mediatek, DSI_TE-eint";
-		status = "disabled";
-	};
-
 	mmsys_config: mmsys_config@14000000 {
 		compatible = "mediatek,mmsys_config";
 		reg = <0 0x14000000 0 0x1000>;
 		interrupts = <GIC_SPI 274 IRQ_TYPE_LEVEL_HIGH>;
 	};
 
-	disp_mutex0@14001000 {
-		compatible = "mediatek,disp_mutex0";
+	dispsys_config: dispsys_config@14000000 {
+		compatible = "mediatek,dispsys_config",
+					"syscon",
+					"mediatek,mt6873-mmsys";
+		reg = <0 0x14000000 0 0x1000>;
+		#clock-cells = <1>;
+		iommus = <&iommu0 M4U_PORT_L1_OVL_2L_RDMA0>;
+		mediatek,larb = <&smi_larb1>;
+		fake-engine = <&smi_larb0 M4U_PORT_L0_DISP_FAKE0>,
+				<&smi_larb1 M4U_PORT_L1_DISP_FAKE1>;
+
+		clocks = <&scpsys SCP_SYS_DIS>,
+			   <&dispsys_config MM_26MHZ>,
+			   <&dispsys_config MM_DISP_CONFIG>,
+			   <&dispsys_config MM_DISP_MUTEX0>;
+		clock-num = <4>;
+
+		/* define threads, see mt6873-gce.h */
+		mediatek,mailbox-gce = <&gce_mbox>;
+		mboxes = <&gce_mbox 0 0 CMDQ_THR_PRIO_4>,
+			<&gce_mbox 1 0 CMDQ_THR_PRIO_4>,
+			<&gce_mbox 2 0 CMDQ_THR_PRIO_4>,
+			<&gce_mbox 3 CMDQ_NO_TIMEOUT CMDQ_THR_PRIO_2>,
+#if defined(CONFIG_MTK_SEC_VIDEO_PATH_SUPPORT)
+			<&gce_mbox 4 0 CMDQ_THR_PRIO_4>,
+			<&gce_mbox_sec 8 0 CMDQ_THR_PRIO_3>;
+#else
+			<&gce_mbox 4 0 CMDQ_THR_PRIO_4>;
+#endif
+
+		gce-client-names = "CLIENT_CFG0",
+			"CLIENT_CFG1",
+			"CLIENT_CFG2",
+			"CLIENT_TRIG_LOOP0",
+#if defined(CONFIG_MTK_SEC_VIDEO_PATH_SUPPORT)
+			"CLIENT_SUB_CFG0",
+			"CLIENT_SEC_CFG0";
+#else
+			"CLIENT_SUB_CFG0";
+#endif
+
+		/* define subsys, see mt6873-gce.h */
+		gce-subsys = <&gce_mbox 0x14000000 SUBSYS_1400XXXX>,
+			<&gce_mbox 0x14010000 SUBSYS_1401XXXX>,
+			<&gce_mbox 0x14020000 SUBSYS_1402XXXX>;
+
+		/* define subsys, see mt6873-gce.h */
+		gce-event-names = "disp_mutex0_eof",
+			"disp_mutex1_eof",
+			"disp_token_stream_dirty0",
+			"disp_wait_dsi0_te",
+			"disp_token_stream_eof0",
+			"disp_dsi0_eof",
+			"disp_token_esd_eof0",
+			"disp_wdma0_eof0",
+			"disp_token_stream_block0",
+			"disp_token_cabc_eof0",
+			"disp_wdma0_eof2";
+
+		gce-events =
+			<&gce_mbox CMDQ_EVENT_DISP_STREAM_DONE_ENG_EVENT_0>,
+			<&gce_mbox CMDQ_EVENT_DISP_STREAM_DONE_ENG_EVENT_1>,
+			<&gce_mbox CMDQ_SYNC_TOKEN_CONFIG_DIRTY>,
+			<&gce_mbox CMDQ_EVENT_DSI0_TE_ENG_EVENT>,
+			<&gce_mbox CMDQ_SYNC_TOKEN_STREAM_EOF>,
+			<&gce_mbox CMDQ_EVENT_DSI0_FRAME_DONE>,
+			<&gce_mbox CMDQ_SYNC_TOKEN_ESD_EOF>,
+			<&gce_mbox CMDQ_EVENT_DISP_WDMA0_FRAME_DONE>,
+			<&gce_mbox CMDQ_SYNC_TOKEN_STREAM_BLOCK>,
+			<&gce_mbox CMDQ_SYNC_TOKEN_CABC_EOF>,
+			<&gce_mbox CMDQ_EVENT_DISP_WDMA0_FRAME_DONE>;
+
+		helper-name = "MTK_DRM_OPT_STAGE",
+			"MTK_DRM_OPT_USE_CMDQ",
+			"MTK_DRM_OPT_USE_M4U",
+			"MTK_DRM_OPT_SODI_SUPPORT",
+			"MTK_DRM_OPT_IDLE_MGR",
+			"MTK_DRM_OPT_IDLEMGR_SWTCH_DECOUPLE",
+			"MTK_DRM_OPT_IDLEMGR_BY_REPAINT",
+			"MTK_DRM_OPT_IDLEMGR_ENTER_ULPS",
+			"MTK_DRM_OPT_IDLEMGR_KEEP_LP11",
+			"MTK_DRM_OPT_DYNAMIC_RDMA_GOLDEN_SETTING",
+			"MTK_DRM_OPT_IDLEMGR_DISABLE_ROUTINE_IRQ",
+			"MTK_DRM_OPT_MET_LOG",
+			"MTK_DRM_OPT_USE_PQ",
+			"MTK_DRM_OPT_ESD_CHECK_RECOVERY",
+			"MTK_DRM_OPT_ESD_CHECK_SWITCH",
+			"MTK_DRM_OPT_PRESENT_FENCE",
+			"MTK_DRM_OPT_RDMA_UNDERFLOW_AEE",
+			"MTK_DRM_OPT_HRT",
+			"MTK_DRM_OPT_HRT_MODE",
+			"MTK_DRM_OPT_DELAYED_TRIGGER",
+			"MTK_DRM_OPT_OVL_EXT_LAYER",
+			"MTK_DRM_OPT_AOD",
+			"MTK_DRM_OPT_RPO",
+			"MTK_DRM_OPT_DUAL_PIPE",
+			"MTK_DRM_OPT_DC_BY_HRT",
+			"MTK_DRM_OPT_OVL_WCG",
+			"MTK_DRM_OPT_OVL_SBCH",
+			"MTK_DRM_OPT_COMMIT_NO_WAIT_VBLANK",
+			"MTK_DRM_OPT_MET",
+			"MTK_DRM_OPT_REG_PARSER_RAW_DUMP",
+			"MTK_DRM_OPT_VP_PQ",
+			"MTK_DRM_OPT_GAME_PQ",
+			"MTK_DRM_OPT_MMPATH",
+			"MTK_DRM_OPT_HBM";
+
+		helper-value = <0>, /*MTK_DRM_OPT_STAGE*/
+			<1>, /*MTK_DRM_OPT_USE_CMDQ*/
+			<1>, /*MTK_DRM_OPT_USE_M4U*/
+			<0>, /*MTK_DRM_OPT_SODI_SUPPORT*/
+			<0>, /*MTK_DRM_OPT_IDLE_MGR*/
+			<0>, /*MTK_DRM_OPT_IDLEMGR_SWTCH_DECOUPLE*/
+			<0>, /*MTK_DRM_OPT_IDLEMGR_BY_REPAINT*/
+			<0>, /*MTK_DRM_OPT_IDLEMGR_ENTER_ULPS*/
+			<0>, /*MTK_DRM_OPT_IDLEMGR_KEEP_LP11*/
+			<0>, /*MTK_DRM_OPT_DYNAMIC_RDMA_GOLDEN_SETTING*/
+			<0>, /*MTK_DRM_OPT_IDLEMGR_DISABLE_ROUTINE_IRQ*/
+			<0>, /*MTK_DRM_OPT_MET_LOG*/
+			<0>, /*MTK_DRM_OPT_USE_PQ*/
+			<0>, /*MTK_DRM_OPT_ESD_CHECK_RECOVERY*/
+			<0>, /*MTK_DRM_OPT_ESD_CHECK_SWITCH*/
+			<1>, /*MTK_DRM_OPT_PRESENT_FENCE*/
+			<0>, /*MTK_DRM_OPT_RDMA_UNDERFLOW_AEE*/
+			<1>, /*MTK_DRM_OPT_HRT*/
+			<1>, /*MTK_DRM_OPT_HRT_MODE*/
+			<0>, /*MTK_DRM_OPT_DELAYED_TRIGGER*/
+			<0>, /*MTK_DRM_OPT_OVL_EXT_LAYER*/
+			<0>, /*MTK_DRM_OPT_AOD*/
+			<0>, /*MTK_DRM_OPT_RPO*/
+			<0>, /*MTK_DRM_OPT_DUAL_PIPE*/
+			<0>, /*MTK_DRM_OPT_DC_BY_HRT*/
+			<0>, /*MTK_DRM_OPT_OVL_WCG*/
+			<0>, /*MTK_DRM_OPT_OVL_SBCH*/
+			<1>, /*MTK_DRM_OPT_COMMIT_NO_WAIT_VBLANK*/
+			<0>, /*MTK_DRM_OPT_MET*/
+			<1>, /*MTK_DRM_OPT_REG_PARSER_RAW_DUMP*/
+			<0>, /*MTK_DRM_OPT_VP_PQ*/
+			<0>, /*MTK_DRM_OPT_GAME_PQ*/
+			<0>, /*MTK_DRM_OPT_MMPATH*/
+			<0>; /*MTK_DRM_OPT_HBM*/
+	};
+
+	disp_pwm: disp_pwm0@1100e000 {
+		compatible = "mediatek,disp_pwm0",
+				"mediatek,mt6873-disp-pwm";
+		reg = <0 0x1100e000 0 0x1000>;
+		interrupts = <GIC_SPI 171 IRQ_TYPE_LEVEL_HIGH>;
+		#pwm-cells = <2>;
+		clocks = <&infracfg_ao INFRACFG_AO_DISP_PWM_CG>,
+			<&topckgen TOP_MUX_DISP_PWM>,
+			<&topckgen TOP_OSC_D4>;
+		clock-names = "main", "mm", "pwm_src";
+	};
+
+	disp_mutex0: disp_mutex@14001000 {
+		compatible = "mediatek,disp_mutex0",
+					"mediatek,mt6873-disp-mutex";
 		reg = <0 0x14001000 0 0x1000>;
 		interrupts = <GIC_SPI 252 IRQ_TYPE_LEVEL_HIGH>;
+		clocks = <&dispsys_config MM_DISP_MUTEX0>;
 	};
 
 	disp_smi_common@14002000 {
@@ -3162,64 +3323,98 @@
 		mediatek,smi-id = <1>;
 	};
 
-	disp_ovl0@14005000 {
-		compatible = "mediatek,disp_ovl0";
+	disp_ovl0: disp_ovl0@14005000 {
+		compatible = "mediatek,disp_ovl0",
+					"mediatek,mt6873-disp-ovl";
 		reg = <0 0x14005000 0 0x1000>;
 		interrupts = <GIC_SPI 254 IRQ_TYPE_LEVEL_HIGH>;
+		clocks = <&dispsys_config MM_DISP_OVL0>;
+		mediatek,larb = <&smi_larb0>;
+		mediatek,smi-id = <0>;
+		iommus = <&iommu0 M4U_PORT_L0_OVL_RDMA0>,
+			 <&iommu0 M4U_PORT_L0_OVL_RDMA0_HDR>;
 	};
 
-	disp_ovl0_2l@14006000 {
-		compatible = "mediatek,disp_ovl0_2l";
+	disp_ovl0_2l: disp_ovl0_2l@14006000 {
+		compatible = "mediatek,disp_ovl0_2l",
+					"mediatek,mt6873-disp-ovl";
 		reg = <0 0x14006000 0 0x1000>;
 		interrupts = <GIC_SPI 255 IRQ_TYPE_LEVEL_HIGH>;
+		clocks = <&dispsys_config MM_DISP_OVL0_2L>;
+		mediatek,larb = <&smi_larb1>;
+		mediatek,smi-id = <1>;
+		iommus = <&iommu0 M4U_PORT_L1_OVL_2L_RDMA0>,
+			 <&iommu0 M4U_PORT_L1_OVL_2L_RDMA0_HDR>;
 	};
 
-	disp_rdma0@14007000 {
-		compatible = "mediatek,disp_rdma0";
+	disp_rdma0: disp_rdma0@14007000 {
+		compatible = "mediatek,disp_rdma0",
+					"mediatek,mt6873-disp-rdma";
 		reg = <0 0x14007000 0 0x1000>;
 		interrupts = <GIC_SPI 256 IRQ_TYPE_LEVEL_HIGH>;
+		clocks = <&dispsys_config MM_DISP_RDMA0>;
+		mediatek,larb = <&smi_larb0>;
+		mediatek,smi-id = <0>;
+		iommus = <&iommu0 M4U_PORT_L0_DISP_RDMA0>;
 	};
 
-	disp_rsz0@14008000 {
-		compatible = "mediatek,disp_rsz0";
+	disp_rsz0: disp_rsz0@14008000 {
+		compatible = "mediatek,disp_rsz0",
+					"mediatek,mt6873-disp-rsz";
 		reg = <0 0x14008000 0 0x1000>;
 		interrupts = <GIC_SPI 257 IRQ_TYPE_LEVEL_HIGH>;
+		clocks = <&dispsys_config MM_DISP_RSZ0>;
 	};
 
-	disp_color0@14009000 {
-		compatible = "mediatek,disp_color0";
+	disp_color0: disp_color0@14009000 {
+		compatible = "mediatek,disp_color0",
+					"mediatek,mt6873-disp-color";
 		reg = <0 0x14009000 0 0x1000>;
 		interrupts = <GIC_SPI 258 IRQ_TYPE_LEVEL_HIGH>;
+		clocks = <&dispsys_config MM_DISP_COLOR0>;
 	};
 
-	disp_ccorr0@1400a000 {
-		compatible = "mediatek,disp_ccorr0";
+	disp_ccorr0: disp_ccorr0@1400a000 {
+		compatible = "mediatek,disp_ccorr0",
+					"mediatek,mt6873-disp-ccorr";
 		reg = <0 0x1400a000 0 0x1000>;
 		interrupts = <GIC_SPI 259 IRQ_TYPE_LEVEL_HIGH>;
+		clocks = <&dispsys_config MM_DISP_CCORR0>;
 	};
 
-	disp_aal0@1400b000 {
-		compatible = "mediatek,disp_aal0";
+	disp_aal0: disp_aal0@1400b000 {
+		compatible = "mediatek,disp_aal0",
+					"mediatek,mt6873-disp-aal";
 		reg = <0 0x1400b000 0 0x1000>;
 		interrupts = <GIC_SPI 260 IRQ_TYPE_LEVEL_HIGH>;
+		clocks = <&dispsys_config MM_DISP_AAL0>;
 	};
 
-	disp_gamma0@1400c000 {
-		compatible = "mediatek,disp_gamma0";
+	disp_gamma0: disp_gamma0@1400c000 {
+		compatible = "mediatek,disp_gamma0",
+					"mediatek,mt6873-disp-gamma";
 		reg = <0 0x1400c000 0 0x1000>;
 		interrupts = <GIC_SPI 261 IRQ_TYPE_LEVEL_HIGH>;
+		clocks = <&dispsys_config MM_DISP_GAMMA0>;
 	};
 
-	disp_postmask0@1400d000 {
-		compatible = "mediatek,disp_postmask0";
+	disp_postmask0: disp_postmask0@1400d000 {
+		compatible = "mediatek,disp_postmask0",
+					"mediatek,mt6873-disp-postmask";
 		reg = <0 0x1400d000 0 0x1000>;
 		interrupts = <GIC_SPI 262 IRQ_TYPE_LEVEL_HIGH>;
+		clocks = <&dispsys_config MM_DISP_POSTMASK0>;
+		mediatek,larb = <&smi_larb0>;
+		mediatek,smi-id = <0>;
+		iommus = <&iommu0 M4U_PORT_L0_DISP_POSTMASK0>;
 	};
 
-	disp_dither0@1400e000 {
-		compatible = "mediatek,disp_dither0";
+	disp_dither0: disp_dither0@1400e000 {
+		compatible = "mediatek,disp_dither0",
+					"mediatek,mt6873-disp-dither";
 		reg = <0 0x1400e000 0 0x1000>;
 		interrupts = <GIC_SPI 263 IRQ_TYPE_LEVEL_HIGH>;
+		clocks = <&dispsys_config MM_DISP_DITHER0>;
 	};
 
 	mmdvfs_pmqos {
@@ -3333,51 +3528,81 @@
 			"TOP_TVDPLL_CK";	/* 23 */
 	};
 
-	disp_dsc_wrap0_core0@1400f000 {
-		compatible = "mediatek,disp_dsc_wrap0_core0";
-		reg = <0 0x1400f000 0 0x400>;
+	disp_dsc_wrap: disp_dsc_wrap@1400f000 {
+		compatible = "mediatek,disp_dsc_wrap",
+					"mediatek,mt6873-disp-dsc";
+		reg = <0 0x1400f000 0 0x1000>;
 		interrupts = <GIC_SPI 264 IRQ_TYPE_LEVEL_HIGH>;
+		/*clocks = <&dispsys_config  MM_DISP_DSC_WRAP>;*/
 	};
 
-	disp_dsc_wrap0_core1@1400f000 {
-		compatible = "mediatek,disp_dsc_wrap0_core1";
-		reg = <0 0x1400f400 0 0x400>;
-		interrupts = <GIC_SPI 264 IRQ_TYPE_LEVEL_HIGH>;
+	mipi_tx_config0: mipi_tx_config@11e50000 {
+		compatible = "mediatek,mipi_tx_config0",
+					"mediatek,mt6873-mipi-tx";
+		reg = <0 0x11e50000 0 0x1000>;
+		clocks = <&clk26m>;
+		#clock-cells = <0>;
+		#phy-cells = <0>;
+		clock-output-names = "mipi_tx0_pll";
 	};
 
-	dsi0@14010000 {
-		compatible = "mediatek,dsi0";
+	dsi0: dsi@14010000 {
+		compatible = "mediatek,dsi0",
+					"mediatek,mt6873-dsi";
 		reg = <0 0x14010000 0 0x1000>;
 		interrupts = <GIC_SPI 265 IRQ_TYPE_LEVEL_HIGH>;
+		clocks = <&dispsys_config MM_DSI0>,
+			<&dispsys_config MM_DSI_DSI0>,
+			<&mipi_tx_config0>;
+		clock-names = "engine", "digital", "hs";
+		phys = <&mipi_tx_config0>;
+		phy-names = "dphy";
 	};
 
-	disp_wdma0@14011000 {
-		compatible = "mediatek,disp_wdma0";
+	dsi_te: dsi_te {
+		compatible = "mediatek, dsi_te-eint";
+		status = "disabled";
+	};
+
+	disp_wdma0: disp_wdma0@14011000 {
+		compatible = "mediatek,disp_wdma0",
+					"mediatek,mt6873-disp-wdma";
 		reg = <0 0x14011000 0 0x1000>;
 		interrupts = <GIC_SPI 266 IRQ_TYPE_LEVEL_HIGH>;
+		clocks = <&dispsys_config MM_DISP_WDMA0>;
+		mediatek,larb = <&smi_larb0>;
+		mediatek,smi-id = <0>;
+		iommus = <&iommu0 M4U_PORT_L0_DISP_WDMA0>;
 	};
 
 	disp_ufbc_wdma0@14012000 {
 		compatible = "mediatek,disp_ufbc_wdma0";
 		reg = <0 0x14012000 0 0x1000>;
 		interrupts = <GIC_SPI 267 IRQ_TYPE_LEVEL_HIGH>;
+		mediatek,larb = <&smi_larb1>;
 	};
 
-	reserved@14013000 {
-		compatible = "mediatek,reserved";
-		reg = <0 0x14013000 0 0x1000>;
-	};
-
-	disp_ovl2_2l@14014000 {
-		compatible = "mediatek,disp_ovl2_2l";
+	disp_ovl2_2l: disp_ovl2_2l@14014000 {
+		compatible = "mediatek,disp_ovl2_2l",
+					"mediatek,mt6873-disp-ovl";
 		reg = <0 0x14014000 0 0x1000>;
 		interrupts = <GIC_SPI 268 IRQ_TYPE_LEVEL_HIGH>;
+		clocks = <&dispsys_config MM_DISP_OVL0_2L>;
+		mediatek,larb = <&smi_larb1>;
+		mediatek,smi-id = <1>;
+		iommus = <&iommu0 M4U_PORT_L1_OVL_2L_RDMA0>,
+			 <&iommu0 M4U_PORT_L1_OVL_2L_RDMA0_HDR>;
 	};
 
-	disp_rdma4@14015000 {
-		compatible = "mediatek,disp_rdma4";
+	disp_rdma4: disp_rdma4@14015000 {
+		compatible = "mediatek,disp_rdma4",
+					"mediatek,mt6873-disp-rdma";
 		reg = <0 0x14015000 0 0x1000>;
 		interrupts = <GIC_SPI 269 IRQ_TYPE_LEVEL_HIGH>;
+		clocks = <&dispsys_config MM_DISP_RDMA4>;
+		mediatek,larb = <&smi_larb1>;
+		mediatek,smi-id = <1>;
+		iommus = <&iommu0 M4U_PORT_L0_DISP_RDMA0>;
 	};
 
 	dpi0@14016000 {
@@ -3404,10 +3629,13 @@
 		interrupts = <GIC_SPI 273 IRQ_TYPE_LEVEL_HIGH>;
 	};
 
-	mdp_aal4@1401a000 {
-		compatible = "mediatek,mdp_aal4";
+	mdp_aal4: mdp_aal4@1401a000 {
+		compatible = "mediatek,mdp_aal4",
+					"mediatek,mt6873-dmdp-aal";
 		reg = <0 0x1401a000 0 0x1000>;
 		interrupts = <GIC_SPI 274 IRQ_TYPE_LEVEL_HIGH>;
+		clocks = <&dispsys_config MM_MDP_AAL4>;
+		clock-names = "DRE3_AAL0";
 	};
 
 	mdp_tdshp4@1401b000 {
@@ -3420,16 +3648,6 @@
 		compatible = "mediatek,mdp_color4";
 		reg = <0 0x1401c000 0 0x1000>;
 		interrupts = <GIC_SPI 276 IRQ_TYPE_LEVEL_HIGH>;
-	};
-
-	mipi_tx_config0@11e50000 {
-		compatible = "mediatek,mipi_tx_config0";
-		reg = <0 0x11e50000 0 0x1000>;
-	};
-
-	mipi_tx_config0@11e60000 {
-		compatible = "mediatek,mipi_tx_config0";
-		reg = <0 0x11e60000 0 0x1000>;
 	};
 
 	mcucfg: mcucfg@0c530000 {
