--- a/arch/arm64/configs/k6873v1_64_debug_defconfig
+++ b/arch/arm64/configs/k6873v1_64_debug_defconfig
@@ -81,9 +81,7 @@ CONFIG_MTK_CMDQ=y
 CONFIG_MTK_CMDQ_MBOX_EXT=y
 CONFIG_MTK_IMGSENSOR=y
 CONFIG_MTK_SMI_EXT=y
-CONFIG_MTK_LCM=y
 CONFIG_CUSTOM_KERNEL_LCM="td4330_fhdp_dsi_cmd_auo_rt5081"
-CONFIG_MTK_FB=y
 CONFIG_MTK_LCM_PHYSICAL_ROTATION="0"
 CONFIG_LCM_HEIGHT="2280"
 CONFIG_MTK_SENSOR_SUPPORT=y
@@ -253,8 +251,13 @@ CONFIG_MEDIA_SUPPORT=y
 CONFIG_MEDIA_CAMERA_SUPPORT=y
 CONFIG_V4L_PLATFORM_DRIVERS=y
 CONFIG_V4L_MEM2MEM_DRIVERS=y
+CONFIG_DRM=y
+CONFIG_DRM_PANEL_TRULY_TD4330_VDO=y
+CONFIG_DRM_MEDIATEK=y
 CONFIG_FB_MODE_HELPERS=y
 CONFIG_FB_TILEBLITTING=y
+CONFIG_BACKLIGHT_LCD_SUPPORT=y
+CONFIG_BACKLIGHT_CLASS_DEVICE=y
 CONFIG_LOGO=y
 CONFIG_SOUND=y
 CONFIG_SND=y
