[ALPS04928088] cm_mgr: update dts table
update cm_mgr dts table

MTK-Commit-Id: 6a838b4e46cc72330b4f8496be64404accf0d7ca

Change-Id: I0fd6ce4c63a38476a1bab3cd97d948fb292e68cf
CR-Id: ALPS04928088
Feature: Power Management
Signed-off-by: Morven-CF Yeh <morven-cf.yeh@mediatek.com>

--- a/arch/arm64/boot/dts/mediatek/mt6873.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6873.dts
@@ -171,6 +171,11 @@
 		suspend-method = "disable";
 	};
 
+	mcucfg_mp0_counter {
+		compatible = "mediatek,mcucfg_mp0_counter";
+		reg_mp0_counter_base = <&mcucfg>;
+	};
+
 	memory {
 		device_type = "memory";
 		reg = <0 0x40000000 0 0x3e605000>;
