[ALPS04878287] Backlight: enable drm in led driver
[Detail]
Enable drm in led driver

MTK-Commit-Id: f94e6a0c7c197010417a4be9b8e4949d449f6315

Change-Id: I662c07e60af67e9264aa96fd0d320cc2e6c8eb9a
Signed-off-by: mtk14723 <xing.zhang@mediatek.com>
CR-Id: ALPS04878287
Feature: [Android Default] Backlight

--- a/arch/arm64/boot/dts/mediatek/mt6873.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6873.dts
@@ -163,6 +163,17 @@
 		method = "smc";
 	};
 
+	pwmleds {
+		compatible = "mediatek,pwm-leds";
+
+		backlight {
+			label = "lcd-backlight";
+			pwms = <&disp_pwm 0 39385>;
+			max-brightness = <255>;
+			pwm-names = "lcd-backlight";
+		};
+	};
+
 	mtk_lpm: mtk_lpm {
 		compatible = "mediatek,mtk-lpm";
 		#address-cells = <2>;
