--- a/arch/arm64/configs/k6873v1_64_debug_defconfig
+++ b/arch/arm64/configs/k6873v1_64_debug_defconfig
@@ -149,6 +149,7 @@ CONFIG_MTK_FLASHLIGHT_PT_STRICT=y
 CONFIG_MTK_FLASHLIGHT_DLPT=y
 CONFIG_MTK_TINYSYS_SCP_SUPPORT=y
 CONFIG_MTK_LEDS=y
+CONFIG_LEDS_MTK_PWM=y
 CONFIG_MTK_PWM=y
 CONFIG_MTK_CHIP=y
 CONFIG_MTK_IDLE_BALANCE_ENHANCEMENT=y
@@ -355,6 +356,8 @@ CONFIG_IIO_BUFFER=y
 CONFIG_IIO_KFIFO_BUF=y
 CONFIG_MEDIATEK_MT6577_AUXADC=y
 CONFIG_MT635X_AUXADC=y
+CONFIG_PWM=y
+CONFIG_PWM_MTK_DISP=y
 CONFIG_PHY_MTK_USB=y
 CONFIG_EXT4_DEBUG=y
 CONFIG_QUOTA=y
