[ALPS04878287] disp_pwm: add mt6873 support
Add mt6873 driver porting

MTK-Commit-Id: ffa5f0bc6773483cc958bb82dcfd54c50ce4ccd4

Change-Id: Iacee5a7c5fbb518c7f1749cb31c1c249c640b446
Feature:Ambient Light Adaptive Luma
CR-Id:ALPS04878287
Signed-off-by: Damon Chu <damon.chu@mediatek.com>

--- a/arch/arm64/boot/dts/mediatek/mt6873.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6873.dts
@@ -3119,9 +3119,15 @@
 	};
 
 	disp_pwm: disp_pwm0@1100e000 {
-		compatible = "mediatek,disp_pwm0";
+		compatible = "mediatek,disp_pwm0",
+				"mediatek,mt6873-disp-pwm";
 		reg = <0 0x1100e000 0 0x1000>;
 		interrupts = <GIC_SPI 171 IRQ_TYPE_LEVEL_HIGH>;
+		#pwm-cells = <2>;
+		clocks = <&infracfg_ao INFRACFG_AO_DISP_PWM_CG>,
+			<&topckgen TOP_MUX_DISP_PWM>,
+			<&topckgen TOP_OSC_D4>;
+		clock-names = "main", "mm", "pwm_src";
 	};
 
 	mmsys_config: mmsys_config@14000000 {
