--- a/arch/arm64/boot/dts/mediatek/mt6873.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6873.dts
@@ -3988,6 +3988,20 @@
 			<&iommu0 M4U_PORT_L22_CCU0>;
 	};
 
+	ccu@1a101000 {
+		compatible = "mediatek,ccu";
+		reg = <0 0x1a101000 0 0x1000>;
+		interrupts = <GIC_SPI 330 IRQ_TYPE_LEVEL_HIGH>;
+		clocks = <&camsys CAMSYS_MAIN_CCU0_CGPDN>,
+					<&topckgen TOP_MUX_CCU>,
+					<&scpsys SCP_SYS_CAM>,
+					<&scpsys SCP_SYS_MDP>;
+		clock-names = "CCU_CLK_CAM_CCU",
+						"CCU_CLK_TOP_MUX",
+						"CAM_PWR",
+						"MDP_PWR";
+	};
+
 	pseudo_m4u-ccu1 {
 		compatible = "mediatek,mt-pseudo_m4u-port";
 		mediatek,larbid = <CCU1_PSEUDO_LARBID>;
