[ALPS04903662] ZRAM: enable zram swap to disk
Enable ZRAM support in kernel part

Bug: 140882488
Test: Booted twice, checked logs to ensure encryption
is different each time, adb created files in directory.

MTK-Commit-Id: 67236fbfe46e113049c9fefa069c8873e2452c9e

CR-Id: ALPS04903662
Feature: Memory Optimization
Change-Id: I4dd9a2d44f5ebd30f14ecbc6401dd05390c08bf6
Signed-off-by: Juju Sung <juju.sung@mediatek.com>

--- a/drivers/staging/android/Kconfig
+++ b/drivers/staging/android/Kconfig
@@ -60,6 +60,7 @@ config MTK_ENABLE_AGO
 	default n
 	select SWAP
 	select ZRAM
+	select ZRAM_WRITEBACK
 	select CRYPTO_LZ4
 	select MEMCG
 	select MEMCG_SWAP
