--- a/drivers/uio/Kconfig
+++ b/drivers/uio/Kconfig
@@ -167,7 +167,7 @@ config UIO_HV_GENERIC
 	  If you compile this as a module, it will be called uio_hv_generic.
 
 config UIO_MSM_SHAREDMEM
-	bool "MSM shared memory driver"
+	tristate "MSM shared memory driver"
 	default n
 	help
 	  Provides the clients with their respective alloted shared memory
