minidump: Add ftrace support in minidump
Register and dump ftrace buffer on kernel panic, to minidump
table. The dumps are collected in parsed format.

Change-Id: Ia53d5475f2b2eff5045b1b0f91f3b423d3f97c94
Signed-off-by: Prateek Sood <prsood@codeaurora.org>
Signed-off-by: Mukesh Ojha <mojha@codeaurora.org>

--- a/drivers/soc/qcom/Kconfig
+++ b/drivers/soc/qcom/Kconfig
@@ -514,6 +514,15 @@ config QCOM_DYN_MINIDUMP_STACK
 	  where CPU is unable to register it from IPI_CPU_STOP. The stack data
 	  can be used to unwind stack frames.
 
+config QCOM_MINIDUMP_FTRACE
+	bool "QCOM Minidump Support"
+	depends on QCOM_MINIDUMP
+	help
+	  This enables ftrace buffer registration in minidump table.
+	  On oops, ftrace content will be copied to that buffer.
+	  This way ftrace buffer content becomes a part of minidump dump
+	  collection.
+
 config QCOM_MINIDUMP_PANIC_CPU_CONTEXT
 	bool "QCOM Minidump Panic dumps Support"
 	depends on ARM64 && QCOM_MINIDUMP_PANIC_DUMP
