soc: qcom: pmic_glink: Migrate to upstream pdr_interface APIs
Currently, service_locator/notifier APIs are used to get the PDR
state notifications. Migrate to pdr_interface APIs from upstream
for PDR state notifications.

Change-Id: I702fbd30744bae65ba63ddbfb093d5a1172fd23f
Suggested-by: Siddharth Gupta <sidgup@codeaurora.org>
Signed-off-by: Subbaraman Narayanamurthy <subbaram@codeaurora.org>

--- a/drivers/soc/qcom/Kconfig
+++ b/drivers/soc/qcom/Kconfig
@@ -654,6 +654,7 @@ config QTI_PMIC_GLINK
 	tristate "Enable support for PMIC GLINK"
 	depends on RPMSG
 	select QCOM_RPROC_COMMON
+	select QCOM_PDR_HELPERS
 	help
 	  The PMIC Glink driver provides the interface for clients to
 	  communicate over GLink for sending and receiving data to charger
