--- a/qcom/waipio-qrd-pm8010-overlay.dts
+++ b/qcom/waipio-qrd-pm8010-overlay.dts
@@ -7,6 +7,6 @@
 / {
 	model = "Qualcomm Technologies, Inc. Waipio QRD with PM8010";
 	compatible = "qcom,waipio-qrd", "qcom,waipio", "qcom,qrd";
-	qcom,msm-id = <457 0x10000>;
+	qcom,msm-id = <457 0x10000>, <482 0x10000>;
 	qcom,board-id = <0x1000b 0>;
 };
