--- a/qcom/waipio.dtsi
+++ b/qcom/waipio.dtsi
@@ -1727,12 +1727,24 @@
 		reg = <0x3d99058 0x4>;
 	};
 
+	gpu_cc_gx_acd_reset: syscon@3d99358 {
+		compatible = "syscon";
+		reg = <0x3d99358 0x4>;
+	};
+
+	gpu_cc_gx_acd_iroot_reset: syscon@3d9958c {
+		compatible = "syscon";
+		reg = <0x3d9958c 0x4>;
+	};
+
 	gpu_cc_gx_gdsc: qcom,gdsc@3d9905c {
 		compatible = "qcom,gdsc";
 		reg = <0x3d9905c 0x4>;
 		regulator-name = "gpu_cc_gx_gdsc";
 		domain-addr = <&gpu_cc_gx_domain_addr>;
-		sw-reset = <&gpu_cc_gx_sw_reset>;
+		sw-reset = <&gpu_cc_gx_sw_reset>,
+			   <&gpu_cc_gx_acd_reset>,
+			   <&gpu_cc_gx_acd_iroot_reset>;
 		parent-supply = <&VDD_GFX_MXC_VOTER_LEVEL>;
 		qcom,reset-aon-logic;
 		qcom,retain-regs;
