--- a/qcom/waipio.dtsi
+++ b/qcom/waipio.dtsi
@@ -1348,6 +1348,8 @@
 		compatible = "qcom,pmic-glink";
 		qcom,pmic-glink-channel = "PMIC_RTR_ADSP_APPS";
 		qcom,subsys-name = "lpass";
+		qcom,protection-domain = "tms/servreg", "msm/adsp/charger_pd";
+		depends-on-supply = <&ipcc_mproc>;
 
 		battery_charger: qcom,battery_charger {
 			compatible = "qcom,battery-charger";
