--- a/qcom/waipio.dtsi
+++ b/qcom/waipio.dtsi
@@ -1347,6 +1347,7 @@
 	qcom,pmic_glink {
 		compatible = "qcom,pmic-glink";
 		qcom,pmic-glink-channel = "PMIC_RTR_ADSP_APPS";
+		qcom,subsys-name = "lpass";
 
 		battery_charger: qcom,battery_charger {
 			compatible = "qcom,battery-charger";
