ARM: dts: qcom: specify thermal mitigation levels for Waipio MTP/QRD
Add charger thermal mitigation levels for Waipio MTP and QRD so
that thermal SW can set CHARGE_CONTROL_LIMIT property in battery
power supply for thermal mitigation.

Change-Id: I339d2fb4ee9cac06e7120881e3a964fecd4edace

--- a/qcom/waipio-mtp.dtsi
+++ b/qcom/waipio-mtp.dtsi
@@ -102,6 +102,10 @@
 	status = "ok";
 };
 
+&battery_charger {
+	qcom,thermal-mitigation = <3000000 1500000 1000000 500000>;
+};
+
 &qupv3_se9_i2c {
 	status = "ok";
 	qcom,clk-freq-out = <1000000>;
