arm64: add mmc related config
CONFIG_MMC_MTK_PRO=m
CONFIG_MMC_AUTOK=m
CONFIG_MMC_DEBUG=m

(cherry-picked from commit 19fc056bc044e96ad1a3aaaf2a386c097b99727c)
Signed-off-by: mtk13858 <derong.liu@mediatek.com>
Change-Id: I45e17a95f4a326fcc81be7aba545e22554c4f278
CR-Id: ALPS05619749
Feature: eMMC
Signed-off-by: Miles Chen <miles.chen@mediatek.com>

--- a/arch/arm64/configs/k6853v1_64_gki_defconfig
+++ b/arch/arm64/configs/k6853v1_64_gki_defconfig
@@ -176,7 +176,6 @@ CONFIG_MEDIATEK_MT635X_AUXADC=m
 CONFIG_MEDIATEK_MT6577_AUXADC=m
 CONFIG_MTPROF=m
 CONFIG_MMSTAT_TRACER=m
-CONFIG_MMC_MTK=m
 CONFIG_MTK_DVFSRC=m
 CONFIG_REGULATOR_MTK_DVFSRC=m
 CONFIG_INTERCONNECT_MTK=y
@@ -302,3 +301,6 @@ CONFIG_MTK_VOW_MAX_PDK_NUMBER=1
 CONFIG_MTK_VOW_BARGE_IN_SUPPORT=y
 CONFIG_MTK_VOW_DSP_VERSION="ver02"
 CONFIG_MMC_CQHCI=m
+CONFIG_MMC_MTK_PRO=m
+CONFIG_MMC_AUTOK=m
+CONFIG_MMC_DEBUG=m
