--- a/arch/arm64/configs/k6853v1_64_gki_mcl_defconfig
+++ b/arch/arm64/configs/k6853v1_64_gki_mcl_defconfig
@@ -167,7 +167,6 @@ CONFIG_MEDIATEK_MT635X_AUXADC=m
 CONFIG_MEDIATEK_MT6577_AUXADC=m
 CONFIG_MTPROF=m
 CONFIG_MMSTAT_TRACER=m
-CONFIG_MMC_MTK=m
 CONFIG_MTK_DVFSRC=m
 CONFIG_REGULATOR_MTK_DVFSRC=m
 CONFIG_INTERCONNECT_MTK=y
@@ -265,3 +264,6 @@ CONFIG_TOUCHSCREEN_MTK_TOUCH="GTP1151 GT9886 GT9896S"
 CONFIG_MTK_SCHEDULER=m
 CONFIG_MTK_OPP_CAP_INFO=y
 CONFIG_MMC_CQHCI=m
+CONFIG_MMC_MTK_PRO=m
+CONFIG_MMC_AUTOK=m
+CONFIG_MMC_DEBUG=m
