--- a/arch/arm64/configs/k6873v1_64_gki_kasan_defconfig
+++ b/arch/arm64/configs/k6873v1_64_gki_kasan_defconfig
@@ -209,7 +209,6 @@ CONFIG_SND_SOC_TFA9874=m
 CONFIG_USB_XHCI_HCD=m
 CONFIG_USB_MTU3=m
 CONFIG_MMC_CQHCI=m
-CONFIG_MMC_MTK=m
 CONFIG_LEDS_MT6360=m
 CONFIG_LEDS_PWM=m
 CONFIG_LEDS_REGULATOR_VIBRATOR=m
@@ -281,3 +280,6 @@ CONFIG_DEBUG_SECTION_MISMATCH=y
 CONFIG_KASAN=y
 CONFIG_KASAN_INLINE=y
 CONFIG_DRM_FBDEV_EMULATION=y
+CONFIG_MMC_MTK_PRO=m
+CONFIG_MMC_AUTOK=m
+CONFIG_MMC_DEBUG=m
