--- a/arch/arm64/configs/k6873v1_64_gki_pq_only_defconfig
+++ b/arch/arm64/configs/k6873v1_64_gki_pq_only_defconfig
@@ -146,7 +146,6 @@ CONFIG_MEDIATEK_MT635X_AUXADC=m
 CONFIG_MEDIATEK_MT6577_AUXADC=m
 CONFIG_MTPROF=m
 CONFIG_MMSTAT_TRACER=m
-CONFIG_MMC_MTK=m
 CONFIG_MTK_DVFSRC=m
 CONFIG_REGULATOR_MTK_DVFSRC=m
 CONFIG_INTERCONNECT_MTK=y
@@ -277,3 +276,6 @@ CONFIG_NANOHUB_MTK_IPI=y
 CONFIG_MMC_CQHCI=m
 CONFIG_MTK_MET=m
 CONFIG_MTK_MET_PLF="mt6873"
+CONFIG_MMC_MTK_PRO=m
+CONFIG_MMC_AUTOK=m
+CONFIG_MMC_DEBUG=m
