--- a/arch/arm64/configs/k6873v1_64_lk2_defconfig
+++ b/arch/arm64/configs/k6873v1_64_lk2_defconfig
@@ -149,7 +149,6 @@ CONFIG_MEDIATEK_MT635X_AUXADC=m
 CONFIG_MEDIATEK_MT6577_AUXADC=m
 CONFIG_MTPROF=m
 CONFIG_MMSTAT_TRACER=m
-CONFIG_MMC_MTK=m
 CONFIG_MTK_DVFSRC=m
 CONFIG_REGULATOR_MTK_DVFSRC=m
 CONFIG_INTERCONNECT_MTK=y
@@ -265,3 +264,6 @@ CONFIG_TYPEC_MUX_PTN36241G=m
 CONFIG_INCREMENTAL_FS=m
 CONFIG_TOUCHSCREEN_MTK_TOUCH="GT9886 GT9896S"
 CONFIG_MMC_CQHCI=m
+CONFIG_MMC_MTK_PRO=m
+CONFIG_MMC_AUTOK=m
+CONFIG_MMC_DEBUG=m
