--- a/arch/arm64/boot/dts/mediatek/cust_mt6873_msdc.dtsi
+++ b/arch/arm64/boot/dts/mediatek/cust_mt6873_msdc.dtsi
@@ -7,6 +7,7 @@
  ********************************************/
 #include <dt-bindings/gpio/gpio.h>
 &mmc0 {
+	host-index = <0>;
 	status = "okay";
 	pinctrl-names = "default", "state_uhs";
 	pinctrl-0 = <&mmc0_pins_default>;
@@ -16,16 +17,16 @@
 	cap-mmc-highspeed;
 	mmc-hs200-1_8v;
 	mmc-hs400-1_8v;
-	cap-mmc-hw-reset;
 	no-sdio;
 	no-sd;
-	hs400-ds-delay = <0x12814>;
+	hs400-ds-delay = <0x12811>;
 	vmmc-supply = <&mt6359p_vemc_reg>;
 	non-removable;
 	supports-cqe;
 };
 
 &mmc1 {
+	host-index = <1>;
 	status = "okay";
 	pinctrl-names = "default", "state_uhs";
 	pinctrl-0 = <&mmc1_pins_default>;
@@ -58,14 +59,17 @@
 				<PINMUX_GPIO190__FUNC_MSDC0_DAT7>,
 				<PINMUX_GPIO183__FUNC_MSDC0_CMD>;
 			input-enable;
+			drive-strength = <4>;
 			mediatek,pull-up-adv = <MTK_PUPD_SET_R1R0_01>;
 		};
 		pins_clk {
 			pinmux = <PINMUX_GPIO192__FUNC_MSDC0_CLK>;
+			drive-strength = <4>;
 			mediatek,pull-down-adv = <MTK_PUPD_SET_R1R0_10>;
 		};
 		pins_rst {
 			pinmux = <PINMUX_GPIO194__FUNC_MSDC0_RSTB>;
+			drive-strength = <4>;
 			mediatek,pull-up-adv = <MTK_PUPD_SET_R1R0_00>;
 		};
 	};
