arm64: add missing kconfig in tfa project
CONFIG_MMC_MTK_PRO=m
CONFIG_MMC_AUTOK=m
CONFIG_MMC_DEBUG=m

(cherry-picked from commit 293ecc1fdb5f87ddccf7679eb572a35b79894261)
Signed-off-by: mtk13858 <derong.liu@mediatek.com>
Change-Id: I07a7e34a15ce3b66e207cfd44d292132377d5586
CR-Id: ALPS05619749
Feature: eMMC
Signed-off-by: Miles Chen <miles.chen@mediatek.com>

--- a/arch/arm64/configs/k6873v1_64_gki_tfa_defconfig
+++ b/arch/arm64/configs/k6873v1_64_gki_tfa_defconfig
@@ -206,7 +206,6 @@ CONFIG_SND_SOC_TFA9874=m
 CONFIG_USB_XHCI_HCD=m
 CONFIG_USB_MTU3=m
 CONFIG_MMC_CQHCI=m
-CONFIG_MMC_MTK=m
 CONFIG_LEDS_MT6360=m
 CONFIG_LEDS_PWM=m
 CONFIG_LEDS_REGULATOR_VIBRATOR=m
@@ -274,3 +273,6 @@ CONFIG_INTERCONNECT_MTK_MMQOS_MT6873=m
 CONFIG_INCREMENTAL_FS=m
 CONFIG_STATIC_USERMODEHELPER_PATH="/system_ext/bin/aee_core_forwarder"
 CONFIG_DRM_FBDEV_EMULATION=y
+CONFIG_MMC_MTK_PRO=m
+CONFIG_MMC_AUTOK=m
+CONFIG_MMC_DEBUG=m
