--- a/qcom/waipio.dtsi
+++ b/qcom/waipio.dtsi
@@ -1389,6 +1389,10 @@
 		reg = <0x088E0000 0x2000>,
 			<0x088E2000 0x1000>;
 		reg-names = "eud_base", "eud_mode_mgr2";
+
+		clocks = <&clock_gcc GCC_EUSB3_0_CLKREF_EN>;
+		clock-names = "eud_clkref_clk";
+
 		qcom,secure-eud-en;
 		status = "ok";
 	};
