[ALPS05221572] leds: add config for I2C backlight driver
Enable I2C backlight driver

MTK-Commit-Id: a80f458dc3267f48c026616218e4f082abf0976d

Change-Id: Idfc492ce2c12c80789781fb5b835175e77961d1b
Signed-off-by: Xing Zhang <xing.zhang@mediatek.com>
CR-Id: ALPS05221572
Feature: [Android Default] Backlight

--- a/arch/arm64/configs/k6877v1_64_debug_defconfig
+++ b/arch/arm64/configs/k6877v1_64_debug_defconfig
@@ -153,6 +153,7 @@ CONFIG_MTK_FLASHLIGHT_PT_STRICT=y
 CONFIG_MTK_FLASHLIGHT_DLPT=y
 CONFIG_MTK_TINYSYS_SCP_SUPPORT=y
 CONFIG_MTK_LEDS=y
+CONFIG_LEDS_MTK_I2C=y
 CONFIG_MTK_PWM=y
 CONFIG_MTK_IDLE_BALANCE_ENHANCEMENT=y
 CONFIG_MTK_SCHED_EAS_POWER_SUPPORT=y
