--- a/arch/arm64/configs/k6877v1_64_defconfig
+++ b/arch/arm64/configs/k6877v1_64_defconfig
@@ -153,6 +153,7 @@ CONFIG_MTK_FLASHLIGHT_PT_STRICT=y
 CONFIG_MTK_FLASHLIGHT_DLPT=y
 CONFIG_MTK_TINYSYS_SCP_SUPPORT=y
 CONFIG_MTK_LEDS=y
+CONFIG_LEDS_MTK_I2C=y
 CONFIG_MTK_PWM=y
 CONFIG_MTK_IDLE_BALANCE_ENHANCEMENT=y
 CONFIG_MTK_SCHED_EAS_POWER_SUPPORT=y
