--- a/arch/arm64/configs/k6893v1_64_debug_defconfig
+++ b/arch/arm64/configs/k6893v1_64_debug_defconfig
@@ -233,6 +233,7 @@ CONFIG_MTK_VIBRATOR=y
 CONFIG_MTK_SYNC=y
 CONFIG_MTK_VPU_SUPPORT=y
 CONFIG_MTK_VPU_SUPPORT_DEBUG=y
+CONFIG_MTK_VOW_DSP_VERSION="ver02"
 CONFIG_MTK_DRAM_LOG_STORE=y
 CONFIG_MTK_DRAM_LOG_STORE_ADDR=0x0011DF00
 CONFIG_MTK_DRAM_LOG_STORE_SIZE=0x100
