[ALPS05594207] display: support drm
[Detail]
display support drm boot up
display enable full data path

MTK-Commit-Id: 500e4cdff6e05b6713bc21063f08ead8f7af4fb7

Change-Id: I974db910ce8e2ac93d1a5d12e411b4b0abec7dcf
CR-Id: ALPS05594207
Feature: Display Driver (DSI Interface)
Signed-off-by: Cui Zhang <cui.zhang@mediatek.com>
(cherry picked from commit 98f3851c71cb01ba4b91d7c538f47bd72afafa03)

--- a/drivers/gpu/drm/Makefile
+++ b/drivers/gpu/drm/Makefile
@@ -110,7 +110,11 @@ ccflags-y += -I$(srctree)/drivers/gpu/drm/mediatek/			\
              -I$(srctree)/drivers/iommu/				\
              -I$(srctree)/drivers/devfreq/				\
              -I$(srctree)/drivers/gpu/drm/				\
-             -I$(srctree)/drivers/misc/mediatek/include/mt-plat/$(MTK_PLATFORM)/include/mach/				\
              -I$(srctree)/drivers/misc/mediatek/include/mt-plat \
              -I$(srctree)/drivers/misc/mediatek/leds/ \
              -I$(srctree)/drivers/misc/mediatek/leds/$(MTK_PLATFORM)
+ifeq (y, $(filter y, $(CONFIG_MACH_MT6833)))
+ccflags-y += -I$(srctree)/drivers/misc/mediatek/include/mt-plat/mt6833/include/mach/
+else
+ccflags-y += -I$(srctree)/drivers/misc/mediatek/include/mt-plat/$(MTK_PLATFORM)/include/mach/
+endif
