[ALPS05594207] display: support ili9882n panel
[Detail]
support ili9882n panel driver

MTK-Commit-Id: 4ae2a0fe2574e177ed345f75e46b02db7bd308aa

Change-Id: I706c3c5973ea6fd8cce3c8ddd54c69b849456be9
Signed-off-by: Cui Zhang <cui.zhang@mediatek.com>
CR-Id: ALPS05594207
Feature: Display Driver (DSI Interface)
(cherry picked from commit 0f40eca86f16ac2ec81468bbc4feca1a9afc0fd6)

--- a/drivers/gpu/drm/panel/Makefile
+++ b/drivers/gpu/drm/panel/Makefile
@@ -58,3 +58,4 @@ obj-$(CONFIG_DRM_PANEL_TRULY_FT8756_VDO) += panel-truly-ft8756-vdo.o
 obj-$(CONFIG_DRM_PANEL_TRULY_NT35595_CMD) += panel-truly-nt35595-cmd.o
 obj-$(CONFIG_DRM_PANEL_TRULY_NT35595_VDO) += panel-truly-nt35595-vdo.o
 obj-$(CONFIG_DRM_PANEL_TRULY_ILI9881H_VDO) += panel-truly-ili9881h-rt4801-vdo.o
+obj-$(CONFIG_DRM_PANEL_TRULY_ILI9882N_VDO_90HZ) += panel-truly-ili9882n-rt4801-vdo-90hz.o
